Update Gradle to 8.4 and setup spotless plugin