@@ -14,36 +14,39 @@
  * limitations under the License.
  */
 
-buildscript {
-    repositories {
-        mavenLocal()
-        maven {
-            url 'https://plugins.gradle.org/m2/'
-        }
-        mavenCentral()
-    }
-}
-
 apply plugin: 'java-library'
 apply plugin: 'java-library-distribution'
 apply plugin: 'maven-publish'
 apply plugin: 'signing'
 
 
-
 description = 'Google Photos Library API Client Library for Java'
 group = 'com.google.photos.library'
 version = '1.7.3'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 
 repositories {
     mavenCentral()
     mavenLocal()
 }
 
-compileJava.options.encoding = 'UTF-8'
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+tasks.named('sourcesJar') {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+compileJava {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+
+    options.with {
+        encoding = 'UTF-8'
+    }
+}
+
 javadoc.options.encoding = 'UTF-8'
 
 dependencies {
@@ -64,6 +67,8 @@ dependencies {
     testImplementation 'com.google.api:gax-grpc:2.23.3:testlib'
     testImplementation 'com.google.api:gax:2.23.3:testlib'
     testImplementation 'io.grpc:grpc-netty-shaded:1.53.0'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.10.0'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.12.4'
     testImplementation 'org.mockito:mockito-inline:3.12.4'
@@ -82,6 +87,25 @@ test {
     exclude "**/*SmokeTest*"
 }
 
+tasks.named('test', Test) {
+    jvmArgs(
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.io=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.net=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED'
+    )
+}
+
+spotless {
+    enforceCheck = true
+    java {
+        googleJavaFormat()
+
+        // don't fail on format of files generated by Protobuf
+        targetExclude('**/com/google/photos/library/v1/proto/*.java', '**/com/google/photos/types/proto/*.java')
+    }
+}
+
 sourceSets {
     main {
         java {
@@ -97,25 +121,17 @@ clean {
 jar {
     manifest {
         attributes('Implementation-Title': project.name,
-                'Implementation-Version': project.version)
+                'Implementation-Version': project.version,
+                'Automatic-Module-Name': 'com.google.photos.library.client')
     }
 }
 
 task allJars(type: Copy) {
     dependsOn test, jar
     into 'all-jars'
-    // Replace with `from configurations.testRuntime, jar` to include test dependencies
-    from configurations.runtime, jar
-}
-
-task sourcesJar(type: Jar) {
-    from sourceSets.main.allJava
-    classifier = 'sources'
-}
-
-task javadocJar(type: Jar) {
-    from javadoc
-    classifier = 'javadoc'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    // Replace with `configurations.testRuntimeClasspath` to include test dependencies
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } } with jar
 }
 
 artifacts {
@@ -124,7 +140,6 @@ artifacts {
 
 compileJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
-
 
 
 publishing {
